implement signup and login functionality

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,6 +19,6 @@
   <%= f.check_box :admin %>
   <%= f.label "Check if you own this theme park" %><br><br>
 
-  <%= f.submit %><br>
+  <%= f.submit "Sign Up"%><br>
 
 <% end %>
