--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome!</h1>
+<h1>Welcome to the Rails Amusement Park!</h1>
+<img src="https://i.ytimg.com/vi/ktXsx0mMHi4/maxresdefault.jpg" width="300"><br>
+<%= link_to "Log In", login_path %><br>
+<%= link_to "Sign Up", new_user_path %>
