allow for instantiation of rides from user_id and attraction_id

--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -4,7 +4,7 @@
 <p><b>Nausea Rating: </b><%= @attraction.nausea_rating %></p>
 <p><b>Happiness Rating: </b><%= @attraction.happiness_rating %></p>
 
-<%= link_to "Go on this ride", new_ride_path %><br>
+<%= link_to "Go on this ride", rides_path(attraction_id: @attraction.id), method: "post" %><br>
 <%= "if user is an admin" %>
 <%= link_to "Edit This Attraction", edit_attraction_path(@attraction) %><br>
 <% "end" %>
