--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
            <% if current_user %>
              <li><%= link_to "Hello #{current_user.name}!", user_path(current_user) %></li>
              <li><%= link_to "Attractions", attractions_path %></li>
-             <li><%= link_to "Sign Out", logout_path, method: "delete" %></li>
+             <li><%= link_to "Log Out", logout_path, method: "delete" %></li>
            <% else %>
              <li><%= link_to "Sign Up", new_user_path %></li>
              <li><%= link_to "Sign In", login_path %></li>
